# occa

./: CMakeLists.txt
examples/: CMakeLists.txt
include/occa/c/: kernel.h
src/c/: kernel.cpp
src/fortran/: occa_kernel_m.f90
tests/: CMakeLists.txt
